feat: add metre drawing, fix layout spacing and prepare for sheet edit with manager and service